--- a/app/src/css/HomePage.css
+++ b/app/src/css/HomePage.css
@@ -20,11 +20,11 @@ h1 {
 
 .newsBox {
   margin: 3rem;
-  border: 1px solid black;
-  width: 38rem;
-  overflow: auto; 
+  width: 23rem;
+  height: fit-content;
   border: 1px solid #ccc;
   box-sizing: border-box;
+  border-radius: 1rem;
 }
 
 
@@ -44,6 +44,23 @@ h1 {
   border-radius: 5px;
   cursor: pointer;
   text-align: center;
+  font-size: large;
+}
+
+.HomeBtn {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+.HomeBtn:hover {
+  color: white;
+  border-bottom: 3.5px solid; 
+}
+
+.topCover {
+  background-color: black;
+  color: white;
 }
 
 .imgStory {
@@ -52,9 +69,17 @@ h1 {
 }
 
 .storyImg {
-  width: fit-content;
-  height: 400px;
-  border-radius: 2rem;
-  padding: 1rem;
+  width: 22.9rem;
+  height: 300px;
+  /* border-radius: 2rem; */
 }
 
+.footer {
+  text-align: center;
+  margin-left: auto;
+  background-color: black;
+  color: white;
+  padding: 1rem;
+  bottom: 0;
+  width: 100%;
+}
