--- a/app/src/css/HomePage.css
+++ b/app/src/css/HomePage.css
@@ -4,6 +4,18 @@
   box-sizing: border-box;
 }
 
+.btnToggle {
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  border: none;
+  background-color: #007BFF;
+  border-radius: 5px;
+  cursor: pointer;
+  text-align: center;
+  font-size: large;
+}
+
 h1.homeh1{
   text-align: center;
   background-color: white;
