--- a/app/src/css/HomePage.css
+++ b/app/src/css/HomePage.css
@@ -1,14 +1,7 @@
-* {
-  margin: none;
-  padding: none;
-  box-sizing: border-box;
-}
-
 .btnToggle {
   bottom: 0;
   left: 0;
   padding: 1rem;
-  border: none;
   background-color: #007BFF;
   border-radius: 5px;
   cursor: pointer;
@@ -21,23 +14,21 @@ h1.homeh1{
   background-color: white;
 }
 
-.Container {
+.topStoriesContainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 1rem;
-  background-color: white;
-  border-radius: 1rem;
+  /* margin: 5rem; */
+  /* background-color: beige; */
 }
 
 .newsBox {
-  margin: 3rem;
-  width: 23rem;
-  /* height: fit-content; */
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  border-radius: 1rem;
+  margin: 3rem 1rem;
+  width: calc(33.33% - 2rem);
+  max-width: 30rem;
+  height: auto;
+  border: 1px solid black;
 }
 
 
@@ -46,9 +37,7 @@ h1.homeh1{
   justify-content: center;
 }
 
-button.link {
-  bottom: 0;
-  left: 0;
+.link {
   width: 100%;
   padding: 1rem;
   border: none;
@@ -77,21 +66,22 @@ button.link {
 
 .storyTitle {
   color: white;
+  margin: 0;
 }
 
 .author {
-  color: black
+  color: black;
+  margin: 0;
 }
 
-.imgStory {
+.imgStory{
   display: flex;
   justify-content: center;
 }
 
 .storyImg {
-  width: 22.9rem;
+  width: 30rem;
   height: 300px;
-  /* border-radius: 2rem; */
 }
 
 .footer {
