--- a/app/src/css/BestSeller.css
+++ b/app/src/css/BestSeller.css
@@ -14,6 +14,7 @@ nav {
 .lightNav {
   background-color: white;
   color: black;
+  background-color: rgb(233, 232, 232);
 }
 .darkNav {
   background-color: black;
@@ -25,6 +26,14 @@ nav {
 }
 .lightNav a {
   color: black;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover{
+  border-bottom: 2px solid; 
 }
 
 .navLinks {
@@ -42,7 +51,7 @@ nav {
   margin: 4rem;
   border: 2px solid black;
   border-radius: 1rem;
-  background-color: beige;
+  /* background-color: beige; */
 }
 
 .bsH1 {
@@ -63,7 +72,7 @@ nav {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-color: beige;
+  /* background-color: beige; */
   margin-top: 5rem;
 }
 
