--- a/app/src/css/HomePage.css
+++ b/app/src/css/HomePage.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .btnToggle {
   bottom: 0;
   left: 0;
@@ -9,40 +15,70 @@
   font-size: large;
 }
 
-h1.homeh1{
+.homeh1{
   text-align: center;
-  background-color: white;
+  margin: 1rem;
 }
 
 .topStoriesContainer {
   display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  /* margin: 5rem; */
-  /* background-color: beige; */
+  margin: 2rem;
 }
 
 .newsBox {
-  margin: 3rem 1rem;
-  width: calc(33.33% - 2rem);
-  max-width: 30rem;
-  height: auto;
-  border: 1px solid black;
+  margin: 1rem;
+  width: 40rem;
+  height: fit-content;
+  border-radius: 5px;
+  box-shadow: 8px 6px 4px 0 rgba(0, 0, 0, 0.352);
 }
 
+.topCoverDiv {
+  text-align: center;
+  margin: 1rem;
+  background-color: black;
+  color: white;
+  margin: 0;
+  border-radius: 5px 5px 0 0;
+}
+
+.divImgStory{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.storyImg {
+  width: 100%;
+}
+
+.h3P {
+  border: 1px solid black;
+  border-top: none;
+  border-bottom: none;
+}
+
+.author {
+  text-align: center;
+}
+
+.description {
+  text-align: center;
+}
 
 .linkContain {
   display: flex;
   justify-content: center;
 }
 
-.link {
+.linkReadMore {
   width: 100%;
   padding: 1rem;
   border: none;
   background-color: #007BFF;
-  border-radius: 5px;
+  border-radius: 0 0 5px 5px;
   cursor: pointer;
   text-align: center;
   font-size: large;
@@ -52,6 +88,7 @@ h1.homeh1{
   text-decoration: none;
   color: black;
   font-weight: bold;
+  align-self: flex-end;
 }
 
 .HomeBtn:hover {
@@ -59,30 +96,6 @@ h1.homeh1{
   border-bottom: 3.5px solid; 
 }
 
-.topCoverDiv {
-  background-color: black;
-  color: white;
-}
-
-.storyTitle {
-  color: white;
-  margin: 0;
-}
-
-.author {
-  color: black;
-  margin: 0;
-}
-
-.imgStory{
-  display: flex;
-  justify-content: center;
-}
-
-.storyImg {
-  width: 30rem;
-  height: 300px;
-}
 
 .footer {
   text-align: center;
